WIP: di dbcontext +create spent

--- a/HelloMVCWorld/appsettings.json
+++ b/HelloMVCWorld/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=N1TR0\\SQLEXPRESS;Initial Catalog=SpentDb;Integrated Security=True; MultipleActiveResultSets=True"
+  }
 }
