--- a/HelloMVCWorld/appsettings.json
+++ b/HelloMVCWorld/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=N1TR0\\SQLEXPRESS;Initial Catalog=SpentDb;Integrated Security=True; MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=LOCALHOST\\SQLEXPRESS;Initial Catalog=SpentDb;Integrated Security=True; MultipleActiveResultSets=True"
   }
 }
