--- a/SpentCalculator/VueJS/package.json
+++ b/SpentCalculator/VueJS/package.json
@@ -8,11 +8,19 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
+    "watch": "node node_modules/npm-watch/cli.js",
     "lint": "eslint --ext .js,.vue src"
   },
+  "watch": {
+    "dev": "{src}/*.Vue"
+  },
   "dependencies": {
+    "npm-watch": "^0.7.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-i18n": "^8.22.1",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.5.1",
+    "vuex-store": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
