--- a/SpentCalculator/VueJS/package.json
+++ b/SpentCalculator/VueJS/package.json
@@ -15,7 +15,7 @@
     "dev": "{src}/*.Vue"
   },
   "dependencies": {
-    "npm-watch": "^0.7.0",
+    "axios": "^0.21.0",
     "vue": "^2.5.2",
     "vue-i18n": "^8.22.1",
     "vue-router": "^3.0.1",
@@ -52,6 +52,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
+    "npm-watch": "^0.7.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
