--- a/SpentCalculator/SpentCalculator.csproj
+++ b/SpentCalculator/SpentCalculator.csproj
@@ -7,17 +7,25 @@
   <ItemGroup>
     <Compile Remove="AspNetCore\bin\**" />
     <Compile Remove="AspNetCore\obj\**" />
+    <Compile Remove="AspNetCore\SpentCalculatorTest\**" />
     <Content Remove="AspNetCore\bin\**" />
     <Content Remove="AspNetCore\obj\**" />
+    <Content Remove="AspNetCore\SpentCalculatorTest\**" />
     <EmbeddedResource Remove="AspNetCore\bin\**" />
     <EmbeddedResource Remove="AspNetCore\obj\**" />
+    <EmbeddedResource Remove="AspNetCore\SpentCalculatorTest\**" />
     <None Remove="AspNetCore\bin\**" />
     <None Remove="AspNetCore\obj\**" />
+    <None Remove="AspNetCore\SpentCalculatorTest\**" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
