--- a/SpentCalculator/AspNetCore/SpentCalculatorTest/SpentCalculatorTest.csproj
+++ b/SpentCalculator/AspNetCore/SpentCalculatorTest/SpentCalculatorTest.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\SpentCalculator.csproj" />
+    <ProjectReference Include="..\BackEnd.csproj" />
   </ItemGroup>
 
 </Project>
