Dirty commit * Removing HelloMVWorld * Adding PUT method to push a new expenditure * Expenditure edition from front-end * Renaming vue js components

--- a/SpentCalculator/AspNetCore/_ExpendituresCalculator.csproj
+++ b/SpentCalculator/AspNetCore/_ExpendituresCalculator.csproj
@@ -24,7 +24,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.9" />
+    <Compile Remove="Migrations\20201031172638_InitialCreate.cs" />
+    <Compile Remove="Migrations\20201031172638_InitialCreate.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
