Spent to expenditures

--- a/App/BackEnd/appsettings.json
+++ b/App/BackEnd/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LOCALHOST\\SQLEXPRESS;Initial Catalog=SpentDb;Integrated Security=True; MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=LOCALHOST\\SQLEXPRESS;Initial Catalog=ExpendituresCalculator;Integrated Security=True; MultipleActiveResultSets=True"
   }
 }
