--- a/App/BackEnd/Dockerfile
+++ b/App/BackEnd/Dockerfile
@@ -13,4 +13,6 @@ RUN dotnet publish -c Release -o out
 FROM microsoft/aspnetcore:latest
 WORKDIR /app
 COPY --from=build-env /app/out .
+EXPOSE 80
+EXPOSE 443
 ENTRYPOINT ["dotnet", "aspnetapp.dll"]
