--- a/App/BackEnd/Dockerfile
+++ b/App/BackEnd/Dockerfile
@@ -1,18 +1,15 @@
-FROM microsoft/aspnetcore-build:2.0 AS build-env
-WORKDIR /app
-
-# copy csproj and restore as distinct layers
-COPY *.csproj ./
+# Stage 1
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+WORKDIR /build
+COPY . .
 RUN dotnet restore
+RUN dotnet publish -c Release -o /app
 
-# copy everything else and build
-COPY . ./
-RUN dotnet publish -c Release -o out
-
-# build runtime image
-FROM microsoft/aspnetcore:latest
+# Stage 2
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1 AS final
 WORKDIR /app
-COPY --from=build-env /app/out .
-EXPOSE 80
-EXPOSE 443
-ENTRYPOINT ["dotnet", "aspnetapp.dll"]
+COPY --from=build /app .
+
+# Stage 3
+FROM build AS run
+ENTRYPOINT ["dotnet", "run"]
