--- a/App/Properties/launchSettings.json
+++ b/App/Properties/launchSettings.json
@@ -10,17 +10,16 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "Spent",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "SpentCalculator": {
       "commandName": "Project",
-      "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "Cors__AllowedHosts": "http://localhost:8080",
+        "ConnectionStrings__DefaultConnection": "Data Source=LOCALHOST\\SQLEXPRESS;Initial Catalog=ExpendituresDb;Integrated Security=True; MultipleActiveResultSets=True",
+        "ASPNETCORE_ENVIRONMENT": ">Staging"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
