[+] Missing files for last commit

--- a/App/appsettings.Development.json
+++ b/App/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Cors": {
+    "AllowedHosts": "http://localhost:8080"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LOCALHOST\\SQLEXPRESS;Initial Catalog=ExpendituresDb;Integrated Security=True; MultipleActiveResultSets=True"
   }
 }
