--- a/Test/ExpendituresCalculatorTest.csproj
+++ b/Test/ExpendituresCalculatorTest.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\App\ExpendituresCalculatorApp.csproj" />
+    <ProjectReference Include="..\App\BackEnd\ExpendituresCalculator.csproj" />
   </ItemGroup>
 
 </Project>
